--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "rightclick-git",
 	"displayName": "Rightclick Git",
 	"description": "Rightclick files in the directory tree to fiddle with them",
-	"version": "2.0.0-preview",
+	"version": "2.0.0",
 	"publisher": "Everspace",
 	"repository": {
 		"type": "git",
@@ -86,7 +86,8 @@
 		"lint": "eslint src --ext ts",
 		"watch": "tsc -watch -p ./",
 		"pretest": "yarn run compile && yarn run lint",
-		"test": "node ./out/test/runTest.js"
+		"test": "exit 0",
+		"deploy": "vsce publish --yarn"
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
@@ -100,6 +101,7 @@
 		"mocha": "^7.1.2",
 		"prettier": "^2.0.5",
 		"typescript": "^3.8.3",
+		"vsce": "^1.79.5",
 		"vscode-test": "^1.3.0"
 	}
 }
